public/core/v0.10/_sources/reference/tmlt/core/utils/misc/index.rst.txt



***********
misc
***********

.. py:module:: tmlt.core.utils.misc

.. autoapi-nested-parse::

   Miscellaneous helper functions and classes.











Functions
=========

.. list-table::

   * - :func:`.get_nonconflicting_string`
     - Returns a string distinct from given strings.
   * - :func:`.print_sdf`
     - Prints a spark dataframe in a deterministic way.
   * - :func:`.copy_if_mutable`
     - Returns a deep copy of argument if it is mutable.

.. py:function:: get_nonconflicting_string(strs)

   Returns a string distinct from given strings.



.. py:function:: print_sdf(sdf)

   Prints a spark dataframe in a deterministic way.



.. py:function:: copy_if_mutable(value)

   Returns a deep copy of argument if it is mutable.




Classes
=======

.. list-table::

   * - :class:`.RNGWrapper`
     - Mimics python random interface for discrete gaussian sampling.

   
.. py:class:: RNGWrapper(rng)

   Mimics python random interface for discrete gaussian sampling.






   .. automethod:: __init__
   .. py:method:: randrange(high)

      Returns a random integer between 0 (inclusive) and `high` (exclusive).

      :param high: upper bound for random integer range.






